--- a/Example/CHSession/Base.lproj/Main.storyboard
+++ b/Example/CHSession/Base.lproj/Main.storyboard
@@ -1,27 +1,69 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="whP-gf-Uak">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Vmm-Eg-a6H">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="wQg-tq-qST">
+        <!--Table View Controller-->
+        <scene sceneID="zmZ-yN-caR">
             <objects>
-                <viewController id="whP-gf-Uak" customClass="CHViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="uEw-UM-LJ8"/>
-                        <viewControllerLayoutGuide type="bottom" id="Mvr-aV-6Um"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="TpU-gO-2f1">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <tableViewController id="Vmm-Eg-a6H" customClass="CHTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="169" sectionHeaderHeight="28" sectionFooterHeight="28" id="QKz-K8-3eJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tc2-Qw-aMS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="imageCell" rowHeight="170" id="KZN-Rb-eKU" customClass="CHTableViewCell">
+                                <rect key="frame" x="0.0" y="28" width="375" height="170"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KZN-Rb-eKU" id="goF-Wy-lql">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="169"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cS0-Rg-KQe">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="169"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EAX-i9-Joy">
+                                            <rect key="frame" x="8" y="139" width="359" height="22"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="22" id="kqR-Xf-6J2"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="EAX-i9-Joy" firstAttribute="bottom" secondItem="goF-Wy-lql" secondAttribute="bottomMargin" id="2hB-ol-hhN"/>
+                                        <constraint firstAttribute="trailing" secondItem="cS0-Rg-KQe" secondAttribute="trailing" id="3Gb-i6-1wj"/>
+                                        <constraint firstItem="cS0-Rg-KQe" firstAttribute="leading" secondItem="goF-Wy-lql" secondAttribute="leading" id="9wP-IO-shd"/>
+                                        <constraint firstItem="EAX-i9-Joy" firstAttribute="leading" secondItem="goF-Wy-lql" secondAttribute="leading" constant="8" id="Hwl-gn-xQB"/>
+                                        <constraint firstAttribute="trailing" secondItem="EAX-i9-Joy" secondAttribute="trailing" constant="8" id="Jof-F6-H31"/>
+                                        <constraint firstItem="cS0-Rg-KQe" firstAttribute="top" secondItem="goF-Wy-lql" secondAttribute="top" id="kxv-gG-UYe"/>
+                                        <constraint firstAttribute="bottom" secondItem="cS0-Rg-KQe" secondAttribute="bottom" id="wyG-y9-IV1"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="catImageView" destination="cS0-Rg-KQe" id="RD2-sb-GEy"/>
+                                    <outlet property="sizeLabel" destination="EAX-i9-Joy" id="4KY-KP-wQ5"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Vmm-Eg-a6H" id="JD6-Hp-MfY"/>
+                            <outlet property="delegate" destination="Vmm-Eg-a6H" id="VUk-G8-eCr"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="heC-Yo-MET" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="305" y="433"/>
+            <point key="canvasLocation" x="77.599999999999994" y="90.404797601199405"/>
         </scene>
     </scenes>
 </document>
